--- a/index.html
+++ b/index.html
@@ -2,57 +2,153 @@
 <html lang="pl">
 
 <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="stylesheet" href="styl.css" type="text/css" />
 	<script type="text/javascript"  src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="http://code.jquery.com/ui/1.10.2/jquery-ui.min.js"></script>
 </head>
 
 <body>
-	<div class="content">
-		<nav id="menu">
-			<ul>
-				<li class ="dropdown" >
-					<a href="#">Nav 1</a>
-					<ul class = "submenu">
-						<li><a href="#">Nav 1-1</a></li>
-						<li><a href="#">Nav 1-2</a></li>
-					</ul>
-				</li>
-				<li class ="dropdown" >
-					<a href="#">Nav 2</a>
-					<ul class = "submenu">
-						<li><a href="#">Nav 2-1</a></li>
-						<li><a href="#">Nav 2-2</a></li>
-						<li><a href="#">Nav 2-3</a></li>
-					</ul>
-				</li>
-				<li class ="dropdown" >
-					<a href="#">Nav 3</a>
-					<ul class = "submenu">
-						<li><a href="#">Nav 3-1</a></li>
-						<li><a href="#">Nav 3-2</a></li>
-						<li><a href="#">Nav 3-3</a></li>
-						<li><a href="#">Nav 3-4</a></li>
-					</ul>
-				</li>
-				<li class ="dropdown" >
-					<a href="#">Nav 4</a>
-					<ul class = "submenu">
-						<li><a href="#">Nav 4-1</a></li>
-						<li><a href="#">Nav 4-2</a></li>
-						<li><a href="#">Nav 4-3</a></li>
-					</ul>
-				</li>
-				<li class ="dropdown" >
-					<a href="#">Nav 5</a>
-					<ul class = "submenu">
-						<li><a href="#">Nav 5-1</a></li>
-						<li><a href="#">Nav 5-2</a></li>
-					</ul>
-				</li>
-			</ul>
-		</nav>
-	</div>
-
+	<nav id="menu">
+		<ul class = "zero-level">
+			<li class ="first-dropdown" >
+				<a href="#">Nav 1</a>
+				<ul class = "first-level">
+					<li class ="second-dropdown" >
+						<a href="#">Nav 1-1</a>
+						<ul class ="second-level">
+							<li><a href="#">Nav 1-1-1</a></li>
+							<li><a href="#">Nav 1-1-2</a></li>
+						</ul>
+					</li>
+					<li class ="second-dropdown" >
+						<a href="#">Nav 1-2</a>
+						<ul class ="second-level">
+							<li><a href="#">Nav 1-2-1</a></li>
+							<li><a href="#">Nav 1-2-2</a></li>
+							<li><a href="#">Nav 1-2-3</a></li>
+						</ul>
+					</li>
+				</ul>
+			</li>
+			<li class ="first-dropdown" >
+				<a href="#">Nav 2</a>
+				<ul class = "first-level">
+					<li class ="second-dropdown" >
+						<a href="#">Nav 2-1</a>
+						<ul class ="second-level">
+							<li><a href="#">Nav 2-1-1</a></li>
+							<li><a href="#">Nav 2-1-2</a></li>
+							<li><a href="#">Nav 2-1-3</a></li>
+						</ul>
+					</li>
+					<li class ="second-dropdown" >
+						<a href="#">Nav 2-2</a>
+						<ul class ="second-level">
+							<li><a href="#">Nav 2-2-1</a></li>
+							<li><a href="#">Nav 2-2-2</a></li>
+							<li><a href="#">Nav 2-2-3</a></li>
+						</ul>
+					</li>
+					<li class ="second-dropdown" >
+						<a href="#">Nav 2-3</a>
+						<ul class ="second-level">
+							<li><a href="#">Nav 2-3-1</a></li>
+							<li><a href="#">Nav 2-3-2</a></li>
+							<li><a href="#">Nav 2-3-3</a></li>
+						</ul>
+					</li>
+				</ul>
+			</li>
+			<li class ="first-dropdown" >
+				<a href="#">Nav 3</a>
+				<ul class = "first-level">
+					<li class ="second-dropdown" >
+						<a href="#">Nav 3-1</a>
+						<ul class ="second-level">
+							<li><a href="#">Nav 3-1-1</a></li>
+							<li><a href="#">Nav 3-1-2</a></li>
+							<li><a href="#">Nav 3-1-3</a></li>
+						</ul>
+					</li>
+					<li class ="second-dropdown" >
+						<a href="#">Nav 3-2</a>
+						<ul class ="second-level">
+							<li><a href="#">Nav 3-2-1</a></li>
+							<li><a href="#">Nav 3-2-2</a></li>
+							<li><a href="#">Nav 3-2-3</a></li>
+						</ul>
+					</li>
+					<li class ="second-dropdown" >
+						<a href="#">Nav 3-3</a>
+						<ul class ="second-level">
+							<li><a href="#">Nav 3-3-1</a></li>
+							<li><a href="#">Nav 3-3-2</a></li>
+							<li><a href="#">Nav 3-3-3</a></li>
+						</ul>
+					</li>
+					<li class ="second-dropdown" >
+						<a href="#">Nav 3-4</a>
+						<ul class ="second-level">
+							<li><a href="#">Nav 3-4-1</a></li>
+							<li><a href="#">Nav 3-4-2</a></li>
+							<li><a href="#">Nav 3-4-3</a></li>
+						</ul>
+					</li>
+				</ul>
+			</li>
+			<li class ="first-dropdown" >
+				<a href="#">Nav 4</a>
+				<ul class = "first-level">
+					<li class ="second-dropdown" >
+						<a href="#">Nav 4-1</a>
+						<ul class ="second-level">
+							<li><a href="#">Nav 4-1-1</a></li>
+							<li><a href="#">Nav 4-1-2</a></li>
+							<li><a href="#">Nav 4-1-3</a></li>
+						</ul>
+					</li>
+					<li class ="second-dropdown" >
+						<a href="#">Nav 4-2</a>
+						<ul class ="second-level">
+							<li><a href="#">Nav 4-2-1</a></li>
+							<li><a href="#">Nav 4-2-2</a></li>
+							<li><a href="#">Nav 4-2-3</a></li>
+						</ul>
+					</li>
+					<li class ="second-dropdown" >
+						<a href="#">Nav 4-3</a>
+						<ul class ="second-level">
+							<li><a href="#">Nav 4-3-1</a></li>
+							<li><a href="#">Nav 4-3-2</a></li>
+							<li><a href="#">Nav 4-3-3</a></li>
+						</ul>
+					</li>
+				</ul>
+			</li>
+			<li class ="first-dropdown" >
+				<a href="#">Nav 5</a>
+				<ul class = "first-level">
+					<li class ="second-dropdown" >
+						<a href="#">Nav 5-1</a>
+						<ul class ="second-level">
+							<li><a href="#">Nav 5-1-1</a></li>
+							<li><a href="#">Nav 5-1-2</a></li>
+							<li><a href="#">Nav 5-1-3</a></li>
+						</ul>
+					</li>
+					<li class ="second-dropdown" >
+						<a href="#">Nav 5-2</a>
+						<ul class ="second-level">
+							<li><a href="#">Nav 5-2-1</a></li>
+							<li><a href="#">Nav 5-2-2</a></li>
+							<li><a href="#">Nav 5-2-3</a></li>
+						</ul>
+					</li>
+				</ul>
+			</li>
+		</ul>
+	</nav>
 </body>
 
 <script type="text/javascript" src="menu.js"></script>
